# OpenRayman

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE_libopenrayman  LICENSE_openrayman  README.md  TODO
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
build_win/lib/gl3w/: Makefile  cmake_install.cmake
build_win/lib/glfw/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
build_win/lib/glfw/src/: Makefile  cmake_install.cmake  glfw3.pc  glfw3ConfigVersion.cmake  glfw_config.h
build_win/src/: Makefile  cmake_install.cmake
data/common/: info.json
data/games/rayman2_openrayman/: README  manifest.json
docs/: README.md
game_demos/: README.md
game_demos/r2_demo/: Lisezmoi.txt  StartPrg.ini  run.MMS
game_demos/r2_demo/BinData/: Game.dsb
game_demos/r2_demo/BinData/Vignette/: DemoEnd3.gf  DemoGer2.gf  DemoGer3.gf  OLD_Rayman.gf  Rayman.gf
game_demos/r2_demo/BinData/World/Levels/: FIX.rtb  FIX.rts
game_demos/r2_demo/BinData/World/Sound/: BA101.apm  BA102.apm  BA104.apm  BA105.apm  BA107.apm  BA108.apm  BA109.apm  BA114.apm  BA302.apm  BA305.apm  BA306.apm  Ba1r05.apm  Ba1r06.apm  Ba1r07.apm  Ba1r08.apm  Ba1r09.apm  Ba1r10.apm  Ba1r11.apm  Ba1r12.apm  Ba1r13.apm  Ba1r16.apm  Ba1r22.apm  Ba1r23.apm  Ba209.apm  Ba211.apm  Ba214.apm  Ba215.apm  Bnk_3.bnm  CA101.apm  CA102.apm  CA104.apm  CA105.apm  CA107.apm  CA110.apm  CA111.apm  CA201.apm  CA204.apm  CA205.apm  Ci01.apm  Ci02.apm  (+2 more)
game_demos/r2_demo/InstData/: Rayman.tga  STRINGS.FRA  Strings.eng  Ubiins.des  desinstallerd.pcx  desinstallerf.pcx  installerd.pcx  installf.pcx  installu.pcx  installx.pcx  jouerd.pcx  jouerf.pcx  joueru.pcx  playd.pcx  playu.pcx  quitterd.pcx  quitteru.pcx  quitterx.pcx  quitu.pcx  quitx.pcx  uninstallu.pcx  uninstallx.pcx
game_demos/r2_demo/dll/: SND_CPA.ini
game_demos/rayman 2 early demo/: Autorun.inf  LOADER.INI  Ray2Menu.MRC  Readme.txt
game_demos/rayman 2 early demo/BinData/: convert_all.bat  game.dsb
game_demos/rayman 2 early demo/BinData/Options/: Current.cfg
game_demos/rayman 2 early demo/BinData/SaveGame/HiddenSlot/: Bast_20_0.sav  General.sav
game_demos/rayman 2 early demo/BinData/Vignette/: DemoEnd1.gf  DemoEnd1.gf.tga  DemoEnd2.gf  DemoEnd2.gf.tga  DemoEnd3.gf.tga  DemoFin1.gf  DemoFin2.gf  DemoFin3.gf  DemoGer1.gf  DemoGer1.gf.tga  DemoGer2.gf.tga  Morb.gf.tga  Morb_00.gf  Old.gf.tga  Option.gf.tga  Options.gf  UbiSoft.gf
game_demos/rayman 2 early demo/BinData/World/Levels/: FIX.rtp  FIX.rtt  Fix.gpt  Fix.ptx  (+1 more)
game_demos/rayman 2 early demo/InstData/: Rayman.pcx  Ubi.eng  Ubi.fra  desinstalleru.pcx  desinstallerx.pcx  installd.pcx  installerf.pcx  installeru.pcx  installerx.pcx  jouerx.pcx  playf.pcx  playx.pcx  quitd.pcx  quitf.pcx  quitterf.pcx  uninstalld.pcx  uninstallf.pcx
game_demos/tt_level_demo/: AUTORUN.INF  Tonic Trouble Readme.txt
game_demos/tt_level_demo/DLL/: SND_CPA.INI
game_demos/tt_level_demo/Demos/Marmite/: Demo000.sav
game_demos/tt_level_demo/GAMEDATA/: Camera.cst  Vignette.cnt  game.bpg  game.dsb
game_demos/tt_level_demo/GAMEDATA/OPTIONS/: Current.cfg  Default.cfg
game_demos/tt_level_demo/INSTDATA/: ED.PCX  ENEXITD.PCX  ENEXITF.PCX  ENEXITU.PCX  ENEXITX.PCX  ENINSTD.PCX  ENINSTF.PCX  ENINSTU.PCX  ENINSTX.PCX  ENSTARTD.PCX  ENSTARTF.PCX  ENSTARTU.PCX  ENSTARTX.PCX  ENUNIND.PCX  ENUNINF.PCX  ENUNINU.PCX  ENUNINX.PCX  strings.eng  ubi.eng
libopenrayman/: CMakeLists.txt
libopenrayman/include/openrayman/: apm_audio_track.h  bnm_audio_bank.h  cnt_archive.h  common_audio.h  common_stream.h  dsb_script.h  gf_texture.h
libopenrayman/src/: apm_audio_track.cc  bnm_audio_bank.cc  cnt_archive.cc  common_stream.cc  dsb_script.cc  gf_texture.cc
src/: .clang_complete  CMakeLists.txt  data_extractor.cc  data_extractor.h  engine.cc  engine.h  game.cc  game.h  game_controller.cc  game_controller.h  info.h  main.cc
src/config/: config.cc  config.h  info.cc  info.h
src/data_extractor/: data_decoder.cc  data_decoder.h  data_extractor.cc  data_extractor.h
src/data_extractor/cnt/: cnt_archive.cc  cnt_archive.h
src/data_extractor/dsb/: dsb_decompiler.cc  dsb_decompiler.h
src/data_extractor/gf/: gf_converter.cc  gf_converter.h
src/dsb_interpreter/: dsb_instruction.h  dsb_interpreter.cc  dsb_interpreter.h  dsb_interpreter_debugger.cc  dsb_interpreter_debugger.h  dsb_interpreter_string_utils.h
src/dsb_interpreter/instructions/: all.h
src/dsb_interpreter/instructions/begin_section/: dsb_instruction_begin_section.h
src/dsb_interpreter/instructions/comment/: dsb_instruction_comment.h
src/dsb_interpreter/instructions/invalid_dsb/: dsb_instruction_invalid_dsb.h
src/dsb_interpreter/instructions/level_add/: dsb_instruction_level_add.h
src/dsb_interpreter/instructions/set_data_dir/: dsb_instruction_set_data_dir.h
src/dsb_interpreter/instructions/set_texture_file/: dsb_instruction_set_texture_file.h
src/dsb_interpreter/instructions/vignette/create_bar/: dsb_instruction_vignette_create_bar.h
src/dsb_interpreter/instructions/vignette/load_img/: dsb_instruction_vignette_load_img.h
src/dsb_interpreter/instructions/vignette/set_color/: dsb_instruction_vignette_set_color.h
src/input/: input_provider.h  input_state.h  standalone_input_provider.cc  standalone_input_provider.h
src/math/: math.h
src/platform/: backend_specifics.h  file.cc  file.h  gtk.h  message_box.cc  message_box.h  standalone_backend_specifics.cc  standalone_backend_specifics.h
src/platform/data_extractor/: data_extractor_dialog.h  gtk.cc  gtk.h  gtk_header_bar.cc  gtk_header_bar.h  platform.h  windows.cc  windows.h
src/renderer/: bind_guard.h  buf.cc  buf.h  renderer.h  texture.cc  texture.h
src/tools/: cnt_tools.cc  cnt_tools.h  common_tools.h  gf_tools.cc  gf_tools.h
src/window/: glfw_window.cc  glfw_window.h  sdl_window.cc  sdl_window.h  window.h
win32/: app.rc  app.res  application.manifest
win32/SDL2/SDL2/: SDL_cpuinfo.h  SDL_hints.h  SDL_main.h  SDL_platform.h  SDL_stdinc.h  SDL_system.h  SDL_syswm.h  SDL_version.h
(+133 files in other folders)
