project(OpenRayman)
cmake_minimum_required(VERSION 2.6)

set(CMAKE_BUILD_TYPE Release CACHE STRING "The type of build")
set(USE_LIBRETRO OFF CACHE BOOL "If OpenRayman should be built as a libretro core (TODO)")
set(CMAKE_CXX_STANDARD 11)
add_definitions(-std=gnu++11)
set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
add_subdirectory(lib/glfw)
add_subdirectory(src)
